--- a/package.json
+++ b/package.json
@@ -15,5 +15,19 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.13.0"
-  }
+  },
+  "name": "squeaky-cleaners",
+  "description": "<h1 align=\"center\">Squeaky Cleaners</h1>",
+  "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ivydo/Squeaky-Cleaners.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ivydo/Squeaky-Cleaners/issues"
+  },
+  "homepage": "https://github.com/ivydo/Squeaky-Cleaners#readme"
 }
