--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "test": "jest --verbose test/*",
     "start": "node server.js",
-    "seeds": "node seeds/index.js"
+    "seeds": "node seeds/index.js",
+    "watch": "nodemon server.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -14,6 +15,7 @@
     "express-session": "^1.17.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.13.0"
   },
   "name": "squeaky-cleaners",
